# mt-photos-insightface-unofficial

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
