[project]
name = "mt-photos-insightface-unofficial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.12",
    "insightface>=0.7.3",
    "onnxruntime-gpu<1.20",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.33.0",
]

[[tool.uv.index]]
url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'
default = true